modified:   index.html modified:   script.js

--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@
             
             <div class="action-bar-right">
                 <span id="loader">Génération en cours...</span>
-                <button type="button" id="finish-btn" class="btn btn-success">
+                <button type="button" id="finish-btn" class="btn btn-success" style="display: none;">
                     <span class="material-symbols-outlined">picture_as_pdf</span>Prévisualiser et Générer le PDF
                 </button>
             </div>
